--- a/boletim.routing.yml
+++ b/boletim.routing.yml
@@ -5,26 +5,15 @@ boletim.boletim_controller_index:
     _controller: '\Drupal\boletim\Controller\BoletimController::index'
     _title: 'index'
   requirements:
-    _permission: 'access content'
-
-boletim.boletim_controller_mail:
-  path: '/boletim/send/{node}'
-  defaults:
-    _controller: '\Drupal\boletim\Controller\BoletimController::email'
-  requirements:
-    _permission: 'access content'
-  options:
-    parameters:
-      node:
-        type: entity:node
-
+    _permission: 'administer software updates'
+    
 boletim.boletim_send_mail:
   path: '/boletim/{node}/send'
   defaults:
     _controller: '\Drupal\boletim\Controller\BoletimController::email'
     _title_callback: 'Enviar'
   requirements:
-    _permission: 'access content'
+    _permission: 'administer software updates'
     node: \d+
   options:
     parameters:
