adicionado dependência jquery_ui_sortable
Fix #1;

--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,7 @@
             "email": "verissimotgv@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "drupal/jquery_ui_sortable": "^1.1",
+    }
 }
