--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,6 @@
         }
     ],
     "require": {
-        "drupal/jquery_ui_sortable": "^1.1",
-    },
+        "drupal/jquery_ui_sortable": "^1.1"
+    }
 }
