--- a/boletim.info.yml
+++ b/boletim.info.yml
@@ -1,7 +1,7 @@
 name: 'boletim'
 type: module
 description: 'Boletim'
-core: 8.x
+core_version_requirement: ^10.3 || ^11.0
 package: 'Custom'
 dependencies:
   - jquery_ui_sortable
